# omniskill

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  omniskill.yaml  pyproject.toml  test_agent_cards.py  test_registry.py
agents/: README.md
bundles/: README.md
catalog/: README.md  mcp-servers.yaml
dissection/: .dissection-metadata  README.md  build-system.md  dependencies.md  error-handling.md  gap-analysis.md  glossary.md  knowledge-graph.md  performance-patterns.md  security-patterns.md  tech-stack.md  testing-patterns.md
docs/: DDE-METHODOLOGY.md  README.md  agent-cards.html  agent-cards.md  architecture.html  architecture.md  cli-guide.html  cli-guide.md  creating-agents.html  creating-agents.md  creating-bundles.html  creating-pipelines.html  creating-pipelines.md  creating-skills.html  creating-synapses.html  creating-synapses.md  faq.html  faq.md  getting-started.html  getting-started.md  guardrails.md  integration-catalog.html  integration-catalog.md  llms-txt.html  llms-txt.md  migration-v2.md  migration-v3.html  migration-v3.md  pipeline-orchestration.md  platform-guide.html  sequential-thinking.md
hooks/: hooks.yaml  on_deviation.py  on_failure.py  post_step.py  pre_step.py  session_start.py
pipelines/: README.md  dissect-to-skill.yaml  skill-upgrade.yaml
plans for omniskill v 3/: 00-plan-index.xml  01-v3-master-strategy.xml  02-sdk-capability-integration-matrix.xml  03-architecture-blueprint.xml  04-workstreams-and-milestones.xml  05-validation-stress-plan.xml  06-security-governance-plan.xml  07-release-migration-plan.xml  08-claude-execution-playbook.xml  09-implementation-backlog.xml  10-claude-prompt-library.xml  11-context-governance-protocol.xml  12-execution-gates-scorecard.xml  13-plan-schema-and-ci.xml  14-traceability-matrix.xml  15-automation-and-issues.xml  16-redteam-and-golden-runs.xml  17-operating-model.xml  18-threat-model-stride.xml  19-control-library.xml  20-slo-sla-error-budget.xml  21-benchmark-harness.xml  22-model-routing-policy.xml  23-decision-records-framework.xml  24-self-healing-playbooks.xml  25-evaluation-rubric.xml  26-cost-and-capacity-planning.xml  27-data-retention-and-provenance.xml  28-change-management-and-experiments.xml
(+327 files in other folders)
