[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[project]
name = "omniskill"
version = "1.0.0"
description = "Universal AI Agent & Skills Framework — 49 skills, 8 bundles, 7 agents, 5 pipelines"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Ahmed Taha", email = "tahaa755@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
keywords = ["ai", "agents", "skills", "copilot", "claude", "cursor", "windsurf"]

[project.urls]
Homepage = "https://github.com/SufficientDaikon/omniskill"
Documentation = "https://sufficientdaikon.github.io/omniskill/"
Repository = "https://github.com/SufficientDaikon/omniskill"
