[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omniskill"
version = "3.0.0"
description = "Universal AI Agent & Skills Framework with Enforced Intelligence — guardrails, sequential thinking, pipeline orchestration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Ahmed Taha", email = "tahaa755@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
keywords = ["ai", "agents", "skills", "copilot", "claude", "cursor", "windsurf"]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "PyYAML>=6.0",
    "platformdirs>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/SufficientDaikon/omniskill"
Documentation = "https://sufficientdaikon.github.io/omniskill/"
Repository = "https://github.com/SufficientDaikon/omniskill"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.4.0"]

[project.scripts]
omniskill = "omniskill.cli:app"
